我数据库应该好好补补了

--- a/接口需求.md
+++ b/接口需求.md
@@ -97,11 +97,11 @@
 
 ### 添加文章数据
 
-前端给后端提供文章的（标题、正文、点击量、作者），请建立相应的表进行存储，而且要**按组分**和**按年份/日期分类**。
+前端给后端提供文章的（标题、正文、点击量、作者、日期），请建立相应的表进行存储，而且要**按组分**。
 
 ### 查询文章数据
 
-前端向后端查询文章的（标题、正文、点击量、作者），后端将数据交给前端渲染。
+前端向后端查询文章的（标题、正文、点击量、作者、日期），后端将数据交给前端渲染。
 
 
 
